Fnal product ready

--- a/index.html
+++ b/index.html
@@ -35,6 +35,36 @@
                                 console.log("great grandson");
                                 break;
                         }
+                    } else {
+                        switch (num) {
+                            case -3:
+                                console.log("great grandmother");
+                                break;
+
+                            case -2:
+                                console.log("grandmother");
+                                break;
+
+                            case -1:
+                                console.log("mother");
+                                break;
+
+                            case 0:
+                                console.log("me!");
+                                break;
+
+                            case 1:
+                                console.log("daughter");
+                                break;
+
+                            case 2:
+                                console.log("granddaughter");
+                                break;
+
+                            case 3:
+                                console.log("great granddaughter");
+                                break;
+                        }
                     }
                 }
                 let num = parseInt(prompt("Enter number"));
